# appcraft

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: static.yml
appcraft/: __init__.py  cli.py
appcraft/docs/latest/source/: conf.py  getting_started.rst  index.rst
appcraft/docs/latest/source/architecture/: index.rst
appcraft/docs/latest/source/versions/: index.rst
appcraft/scripts/: add_template.py  base.py  cli.py  create_init.py  create_runner.py  list_templates.py  project_init.py  save_template.py
appcraft/template/base/: __init__.py
appcraft/template/ci_cd/: __init__.py
appcraft/template/data_analysis/: __init__.py
appcraft/template/data_visualization/: __init__.py
appcraft/template/docker/: __init__.py
appcraft/template/flask_api/: __init__.py
appcraft/template/flask_ui/: __init__.py
appcraft/template/flask_ui/files/: Pipfile
appcraft/template/git/: __init__.py
appcraft/template/graphql/: __init__.py
appcraft/template/locale/: __init__.py
appcraft/template/logs/: __init__.py
appcraft/template/machine_learning/: __init__.py
appcraft/template/mongodb/: __init__.py
appcraft/template/rabbitmq/: __init__.py
appcraft/template/selenium/: __init__.py
appcraft/template/sqlalchemy/: __init__.py
appcraft/template/tests/: __init__.py
appcraft/template/web_scrapping/: __init__.py
appcraft/template/websockets/: __init__.py
appcraft/templates/: template_abc.py  template_manager.py
appcraft/templates/base/: Pipfile
appcraft/templates/git/: __init__.py
appcraft/templates/git/files/: .gitignore
appcraft/templates/github/: __init__.py
appcraft/templates/locales/: __init__.py
appcraft/templates/poetry/: __init__.py
appcraft/templates/poetry/files/: pyproject.toml
appcraft/templates/web_scraping/: __init__.py
appcraft/templates/web_scraping/files/: pyproject.toml
appcraft/utils/: __init__.py  files.py  template_abc.py  template_adder.py  template_creator.py  template_loader.py  template_manager.py  template_saver.py
appcraft/utils/exceptions/: __init__.py
utils/: template_loader.py
(+177 files in other folders)
