[project]
name = "appcraft"
version = "0.5.4"
description = "Appcraft is a modular framework designed to simplify software development by providing a structured and extensible architecture. It enables developers to create and manage complex applications with ease, ensuring scalability and maintainability."
authors = [{ name = "Dux Tecnologia", email = "contato@tpereira.com.br" }]
dependencies = [
    "toml"
]
classifiers= [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]

requires-python = ">=3.9"

readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
appcraft = "appcraft.cli:main"


[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "strict"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"