[tool.appcraft]
environment = "development"  # "production" ou "development"
debug_mode = true
log_level = "info"  # "debug", "info", "warning", "error" ou "critical"
lang = "en"  # See supported langs
lang_preference = "config"  # "config" ou "system"
supported_langs = ["en", "pt_BR"]

# Use 'lang_preference' to decide whether the language should be set from the configuration or from the system

[tool.poetry]
name = "Appcraft Project"
version = "0.0.1"
description = "Description of the Appcraft Project"
authors = ["John Doe <contact@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/duxtec/appcraft"
documentation = "https://duxtec.github.io/appcraft/latest/index.html"
keywords = ["appcraft"]
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.dependencies]
python = "^3.12"
toml = "0.10.2"
prompt-toolkit = "*"

[tool.poetry.group.dev.dependencies]
sphinx = "8.0.2"
flake8 = "6.1.0"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
